* Fix appearance of long file name at collapsed file upload component

--- a/src/view/css/import.css
+++ b/src/view/css/import.css
@@ -108,9 +108,18 @@
     flex-flow: row nowrap;
 }
 
+.upload-form__collapsed .import-form
+{
+    overflow: hidden;
+    margin-right: 20px;
+}
+
 .upload-form__collapsed .import-form__filename
 {
     margin-left: 8px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .upload-form__collapsed .import-form__options
